[tool.poetry]
name = "comparison-by-llm"
version = "0.1.0"
description = ""
authors = ["taimoOptTech <132860814+taimo3810@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.4"
openai = "^1.10.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

